# resume-ranker

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: daily-reset.yml
app/: streamlit_app.py
samples/jd/: product-analyst.txt
samples/resumes/: Jane_Doe.txt  John_Smith.txt
src/resume_ranker/: __init__.py  cli.py  config.py  embed.py  experience.py  extract.py  io.py  pipeline.py  rank.py  skills.py
tests/: test_rank.py
